Added header size for DLD

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -93,7 +93,7 @@
                   </use>
                 </svg>
               </a>
-              <p class="menu-icons__description typographic-mb">Финансовая гарантия результата</p>
+              <p class="menu-icons__description menu-icons__description--size typographic-mb">Финансовая гарантия результата</p>
             </li>
           </ul>
         </div>
@@ -540,10 +540,8 @@
               <span class="section-form__title section-form__title--colortext">бесплатную </span> телефонную
               <span class="section-form__title section-form__title--colortext">консультацию </span>
               по нюансам ЗНО<br /> по английскому языку</h2>
-            <p class="section-form__description typographic-msb">Оставь заявку на участие в
-              <span class="section-form__description section-form__description--colortext"> бесплатном занятии. </span>
-              С вами свяжется консультант
-              и ответит на вопросы.</p>
+            <p class="section-form__description typographic-msb">Оставь заявку на участие в<span class="section-form__description section-form__description--colortext"> бесплатном занятии. </span>
+              С вами свяжется консультант и ответит на вопросы.</p>
             <input class="input-field section-form__input typographic-mb" type="text" name="name" placeholder="Имя*"
               minlength="4" maxlength="30" autocomplete="name" required>
             <input class="input-field section-form__input typographic-mb" type="tel" name="tel" placeholder="Телефон*"
@@ -571,7 +569,7 @@
         <li class="footer__item footer__item--form">
           <form class="footer-form footer__form" action="#" method="GET">
             <label class="footer-form__label" for="phoneNummber">
-              <svg class="icon footer-form__icon" width="20px" height="20px">
+              <svg class="icon footer-form__icon">
                 <use y="0" x="-3" width="125%" height="125%" href="./images/icons-svg/symbol-defs.svg#icon-call">
                 </use>
               </svg>
@@ -589,8 +587,8 @@
         </li>
       </ul>
       <div class="copyright footer__copyright">
-        <p class="copyright__text typographic-mm text-dark">
-          <span class="copyright__symbol typographic-mm text-dark">&copy;</span> Все права защищены, 2019</p>
+        <p class="copyright__text typographic-mm">
+          <span class="copyright__symbol typographic-mm">&copy;</span> Все права защищены, 2019</p>
       </div>
     </div>
   </footer>
