Added header DLD

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -110,11 +110,13 @@
       <section class="section-problem container">
         <div class="section-problem__wrapper">
           <h2 class="section-problem__title typographic-meb">Главные проблемы учеников
-            на English ВНО, которые мы <span
+            на English ВНО, которые <span
+            class="section-problem__title section-problem__title--position">мы </span><span
               class="section-problem__title section-problem__title--colortext">помогаем</span> решить</h2>
           <ul class="menu-problem section-problem__menu-problem items">
             <li class="menu-problem__item">
-              <p class="menu-problem__text typographic-mb">Незнание грамматики</p>
+              <p class="menu-problem__text typographic-mb">Незнание <span
+                class="menu-problem__text menu-problem__text--position"> грамматики</span></p>
             </li>
             <li class="menu-problem__item">
               <p class="menu-problem__text typographic-mb">Неумение воспринимать устную английскую речь</p>
