Added section chosing for DLD

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -160,8 +160,10 @@
                 </svg>
                 <h3 class="menu-actions__title typographic-mb">Аудиторное
                   и онлайн-обучение</h3>
-                <p class="menu-actions__text typographic-mr">Учитель поможет не только
-                  в аудитории, но и во время домашней подготовки. Родители могут участвовать в чате при желании.</p>
+                <p class="menu-actions__text typographic-mr">Учитель поможет не <span
+                  class="menu-actions__text menu-actions__text--position">только</span>
+                  в аудитории, но и во время домашней подготовки. Родители могут <span
+                  class="menu-actions__text menu-actions__text--position"> участвовать</span> в чате при желании.</p>
               </a>
             </li>
             <li class="menu-actions__item">
