Draft version of the site is ready

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -93,7 +93,8 @@
                   </use>
                 </svg>
               </a>
-              <p class="menu-icons__description menu-icons__description--size typographic-mb">Финансовая гарантия результата</p>
+              <p class="menu-icons__description menu-icons__description--size typographic-mb">Финансовая гарантия
+                результата</p>
             </li>
           </ul>
         </div>
@@ -110,13 +111,12 @@
       <section class="section-problem container">
         <div class="section-problem__wrapper">
           <h2 class="section-problem__title typographic-meb">Главные проблемы учеников
-            на English ВНО, которые <span
-            class="section-problem__title section-problem__title--position">мы </span><span
-              class="section-problem__title section-problem__title--colortext">помогаем</span> решить</h2>
+            на English ВНО, которые <span class="section-problem__title section-problem__title--position">мы
+            </span><span class="section-problem__title section-problem__title--colortext">помогаем</span> решить</h2>
           <ul class="menu-problem section-problem__menu-problem items">
             <li class="menu-problem__item">
               <p class="menu-problem__text typographic-mb">Незнание <span
-                class="menu-problem__text menu-problem__text--position"> грамматики</span></p>
+                  class="menu-problem__text menu-problem__text--position"> грамматики</span></p>
             </li>
             <li class="menu-problem__item">
               <p class="menu-problem__text typographic-mb">Неумение воспринимать устную английскую речь</p>
@@ -161,9 +161,9 @@
                 <h3 class="menu-actions__title typographic-mb">Аудиторное
                   и онлайн-обучение</h3>
                 <p class="menu-actions__text typographic-mr">Учитель поможет не <span
-                  class="menu-actions__text menu-actions__text--position">только</span>
+                    class="menu-actions__text menu-actions__text--position">только</span>
                   в аудитории, но и во время домашней подготовки. Родители могут <span
-                  class="menu-actions__text menu-actions__text--position"> участвовать</span> в чате при желании.</p>
+                    class="menu-actions__text menu-actions__text--position"> участвовать</span> в чате при желании.</p>
               </a>
             </li>
             <li class="menu-actions__item">
@@ -412,13 +412,12 @@
               <li class="list-warranty__item">
                 <p class="list-warranty__text typographic-mm">Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом
                   пробном
-                  тестировании. Иначе мы вернем деньги.<span
+                  тестировании.<br class="list-warranty__text--newline" /> Иначе мы вернем деньги.<span
                     class="list-warranty__text typographic-mm list-warranty__text--colortext">*</span></p>
               </li>
               <li class="list-warranty__item">
                 <p class="list-warranty__text typographic-mm">Ты научишься писать сочинения минимум на 10 баллов из
-                  14.<br />
-                  <span class="list-warranty__text list-warranty__text--colortext typographic-mm">В то
+                  14. <span class="list-warranty__text list-warranty__text--colortext typographic-mm">В то
                     время как 20% учеников получили
                     за сочинение 0.</span>
                 </p>
@@ -428,8 +427,12 @@
                   проведения занятий после формирования команд.</p>
               </li>
               <li class="list-warranty__item">
-                <p class="list-warranty__text typographic-mm">Команды будут сформированы,
-                  исходя из начального уровня учеников. Мы учитываем особенности каждого ученика.</p>
+                <p class="list-warranty__text typographic-mm">Команды будут <span
+                    class="list-warranty__text list-warranty__text--position">сформированы,</span>
+                  исходя из начального <span
+                    class="list-warranty__text list-warranty__text--position">уровня</span><span
+                    class="list-warranty__text list-warranty__text--placing"> учеников. </span><br
+                    class="list-warranty__text--location" />Мы учитываем особенности каждого ученика.</p>
               </li>
             </ul>
           </div>
@@ -443,12 +446,12 @@
             <li class="slider__item slider__item--first-card">
               <div class="slider__link-wrapper">
                 <a href="#" class="slider__link slider__link--img">
-                  <img class="img slider__img" src="./images/graduate1.png" alt="Тоня Кучеровская">
-
-                  <!-- <img class="img logo__img " src="./images/logo-mob.png" alt="brand and company name"
-                  srcset="images/logo-mob.png 320w, images/logo-tabl.png 768w, images/logo-desk.png 1280w"
-                  sizes="(min-width: 768px) 768px, 100wv"> -->
-
+                  <img class="img slider__img" src="./images/graduate1.png" alt="Тоня Кучеровская"
+                    srcset="images/graduate1.png 320w, images/graduate7.png 1280w"
+                    sizes=" (min-width: 1280px) 1280px, 320px">
+                    <!-- sizes=" (min-width: 1280px) 1280px, (min-width: 768px) 768px, 100wv"> -->
+                    <!-- (max-width: 320px) 280px, (max-width: 480px) 440px,  800px" -->
+                    <!-- 100wv sizes="(min-width: 1680px) 1680px, (min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px"> -->
                 </a>
                 <a href="#" class="slider__link slider__link--icon">
                   <svg class="slider__icon" width="26px" height="14px">
@@ -544,7 +547,8 @@
               <span class="section-form__title section-form__title--colortext">бесплатную </span> телефонную
               <span class="section-form__title section-form__title--colortext">консультацию </span>
               по нюансам ЗНО<br /> по английскому языку</h2>
-            <p class="section-form__description typographic-msb">Оставь заявку на участие в<span class="section-form__description section-form__description--colortext"> бесплатном занятии. </span>
+            <p class="section-form__description typographic-msb">Оставь заявку на участие в<span
+                class="section-form__description section-form__description--colortext"> бесплатном занятии. </span>
               С вами свяжется консультант и ответит на вопросы.</p>
             <input class="input-field section-form__input typographic-mb" type="text" name="name" placeholder="Имя*"
               minlength="4" maxlength="30" autocomplete="name" required>
