--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -193,7 +193,8 @@
                 <svg class="icon menu-actions__icon">
                   <use width="104%" height="127%" href="./images/icons-svg/symbol-defs.svg#icon-communication"></use>
                 </svg>
-                <h3 class="menu-actions__title typographic-mb">Психологическая<br class="menu-actions__ttitle--location" />                  поддержка</h3>
+                <h3 class="menu-actions__title typographic-mb">Психологическая<br
+                    class="menu-actions__ttitle--location" /> поддержка</h3>
                 <p class="menu-actions__text typographic-mr">Мы научим тебя методикам прохождения тестирований, <br
                     class="menu-actions__text--location" />умению планировать свою<br
                     class="menu-actions__text--location" />
@@ -232,7 +233,7 @@
         <div class="section-program__wrapper container">
           <h2 class="section-program__title typographic-meb text-white">Наша программа</h2>
           <ul class="list-program section-program__list">
-            <li class="list-program__item">
+            <li class="list-program__item list-program__item--first">
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
@@ -244,12 +245,12 @@
                   <li class="list-program__content">
                     <span class="list-program__segment typographic-mm">Vocabulary</span>
                     <p class="list-program__text typographic-mr ">Family & Relations
-                      People & Society</p>
+                      People & Society<br class="list-program__text--location" /></p>
                   </li>
                 </ul>
               </div>
             </li>
-            <li class="list-program__item">
+            <li class="list-program__item list-program__item--second">
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
@@ -268,7 +269,7 @@
                 </ul>
               </div>
             </li>
-            <li class="list-program__item">
+            <li class="list-program__item list-program__item--third">
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
@@ -277,10 +278,11 @@
                     <p class="list-program__text typographic-mr ">Modal verbs
                       Infinitive
                       Gerund
-                      Participle: 1, 2</p>
+                      Participle: 1, 2<br class="list-program__text--location" /></p>
                   </li>
                   <li class="list-program__content">
-                    <span class="list-program__segment typographic-mm">Vocabulary</span>
+                    <span
+                      class="list-program__segment list-program__segment--vocabulary typographic-mm">Vocabulary</span>
                     <p class="list-program__text typographic-mr ">Travel & Tourism
                       Culture & Free Time
                       Sport</p>
@@ -292,7 +294,7 @@
                 </ul>
               </div>
             </li>
-            <li class="list-program__item">
+            <li class="list-program__item list-program__item--fourth">
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
@@ -300,16 +302,18 @@
                     <span class="list-program__segment typographic-mm">Grammar</span>
                     <p class="list-program__text typographic-mr ">Clauses: Conditional
                       and Wishes
-                      Direct / Reported speech
+                      Direct/Reported speech
                       Preposition
                       Conjunction
-                      Numeral</p>
+                      <span class="list-program__text list-program__text--word">Numeral</span><br
+                        class="list-program__text--location" /></p>
                   </li>
                   <li class="list-program__content">
-                    <span class="list-program__segment typographic-mm">Vocabulary</span>
+                    <span
+                      class="list-program__segment list-program__segment--vocabulary typographic-mm">Vocabulary</span>
                     <p class="list-program__text typographic-mr ">Healthy Living
                       Nature & Environment
-                      Money</p>
+                      Money</p><br class="list-program__text--location" />
                   </li>
                   <li class="list-program__content">
                     <span class="list-program__segment typographic-mm">Writing</span>
@@ -318,7 +322,7 @@
                 </ul>
               </div>
             </li>
-            <li class="list-program__item">
+            <li class="list-program__item list-program__item--fifth">
               <div class="list-program__wrapper">
                 <h3 class="list-program__title typographic-mb text-white">семестр</h3>
                 <ul class="list-program__contents">
@@ -342,7 +346,8 @@
             выбирают</h2>
           <ul class="menu-problem section-choosing__menu-problem items">
             <li class="menu-problem__item">
-              <p class="menu-problem__text">Обучение в малых командах</p>
+              <p class="menu-problem__text">Обучение в <span
+                  class="menu-problem__text menu-problem__text--position">малых</span> командах</p>
             </li>
             <li class="menu-problem__item">
               <p class="menu-problem__text">Визуализированные
@@ -384,12 +389,12 @@
               <h3 class="card__title typographic-meb">Елена Морева</h3>
               <ul class="card__items">
                 <li class="card__item">
-                  <p class="card__description typographic-msb">Опыт подготовки учеников
+                  <p class="card__description typographic-msb">Опыт подготовки <span
+                    class="card__description card__description--position">учеников</span>
                     к ВНО - 6 лет</p>
                 </li>
                 <li class="card__item">
-                  <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года
-                    подряд</p>
+                  <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года подряд</p>
                 </li>
                 <li class="card__item">
                   <p class="card__description typographic-msb">Сдала на отлично международный аналог ВНО - Кембриджский
