Added slider with PerfectPixel

--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -390,29 +390,26 @@
               <ul class="card__items">
                 <li class="card__item">
                   <p class="card__description typographic-msb">Опыт подготовки <span
-                    class="card__description card__description--position">учеников</span>
+                      class="card__description card__description--position">учеников</span>
                     к ВНО - 6 лет</p>
                 </li>
                 <li class="card__item">
-                  <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года подряд</p>
+                  <p class="card__description typographic-msb">Собственный результат сдачи ВНО - 197 баллов 2 года
+                    подряд</p>
                 </li>
                 <li class="card__item">
                   <p class="card__description typographic-msb">Сдала на отлично международный аналог ВНО - Кембриджский
-                    PET (Preliminary English Test)</p>
+                    PET (Preliminary Eng&shy;lish Test)</p>
                 </li>
               </ul>
               <p class="card__text card__text--position typographic-mr">Высшее образование получила в Институте
-                международных отношений НАУ
-                по специальности переводчик - аналитик.</p>
-              <p class="card__text typographic-mr">В свободное время проходит курсы от лучших
-                университетов мира по эффективному преподаванию и методикам написания сочинений.</p>
-              <p class="card__text typographic-mr">В числе пройденных: English
-                Grammar
-                and Essay&shy Writing (Berke&shy;ley), English
-                Grammar&Style (The University of Queesland), How to Write an Essay (Berke&shy;ley), Academic and
-                Business Writing (Berke&shy;ley), The Art of Teaching (GEMS edu&shy;cation), Powerful Tools for Teaching
-                and
-                Learning (University of Houston).</p>
+                международных отношений НАУ по специальности переводчик - аналитик.</p>
+              <p class="card__text typographic-mr">В свободное время проходит курсы от лучших университетов мира по
+                эффективному преподаванию и методикам написания сочинений.</p>
+              <p class="card__text typographic-mr">В числе пройденных: English Grammar and Essay&shy Writing
+                (Berke&shy;ley), English Grammar&Style (The University of Queesland), How to Write an Essay
+                (Berke&shy;ley), Academic and Business Writing (Berke&shy;ley), The Art of Teaching (GEMS
+                edu&shy;cation), Powerful Tools for Teaching and Learning (University of Houston).</p>
               <a href="#" class="card__link typographic-mr">Cambrige English Entry Level Certificate</a>
             </div>
           </div>
@@ -433,7 +430,8 @@
               </li>
               <li class="list-warranty__item">
                 <p class="list-warranty__text typographic-mm">Ты научишься писать сочинения минимум на 10 баллов из
-                  14. <span class="list-warranty__text list-warranty__text--colortext typographic-mm">В то
+                  14. <br
+                  class="list-warranty__text--newstring" /><span class="list-warranty__text list-warranty__text--colortext typographic-mm">В то
                     время как 20% учеников получили
                     за сочинение 0.</span>
                 </p>
@@ -457,7 +455,8 @@
 
       <section class="section-slider">
         <div class="section-slider__wrapper">
-          <h2 class="section-slider__title typographic-meb">Отзывы наших выпускников</h2>
+          <h2 class="section-slider__title typographic-meb">Отзывы <span
+              class="section-slider__title section-slider__title--position">наших</span> выпускников</h2>
           <ul class="slider section-slider__items">
             <li class="slider__item slider__item--first-card">
               <div class="slider__link-wrapper">
@@ -488,15 +487,20 @@
                 <p class="graduate-card__description typographic-mm">Выпуск 2015-го года, Національний університет
                   біоресурсів
                   і природокористування України</p>
-                <p class="graduate-card__text typographic-mm">За короткий час занять з Оленою я опанувала граматику і
+                <p class="graduate-card__text graduate-card__text--narrow typographic-mm">За короткий час занять з
+                  Оленою я опанувала граматику і
                   поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у своїй
-                  тарілці<span class="graduate-card__text graduate-card__text--wide typographic-mm">. Ми з Оленою стали
-                    друзями, тому що її справді хвилювала моя успішність. Вона стала для мене
-                    авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу
-                    похизуватись тим, що я студен</span>...<a
-                    class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
-                    дальше</a>
-                </p>
+                  тарілці ...<a class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
+                  дальше</a></p>
+                <p class="graduate-card__text graduate-card__text--wide typographic-mm">За короткий час
+                  занять з Оленою я опанувала граматику і
+                  поповнила свій зовсім пустий словниковий запас. З першого ж заняття я зрозуміла, що знаходжуся у
+                  своїй
+                  тарілці. Ми з Оленою стали друзями, тому що її справді хвилювала моя успішність. Вона стала для мене
+                  авторитетом, проте я не тремтіла на уроках, маючи страх зробити найменшу помилку. Зараз я можу
+                  похизуватись тим, що я студен ...
+                <a class="graduate-card__link graduate-card__text graduate-card__text--colortext" href="#">Читать
+                  дальше</a></p>
               </div>
             </li>
             <li class="slider__item">
