--- a/project-01/src/index.html
+++ b/project-01/src/index.html
@@ -50,17 +50,11 @@
             <h2 class="section-training__title typographic-meb title">Комплексная подготовка к ВНО <br /> по английскому
               языку</h2>
             <p class="section-training__slogan typographic-mb">Просто не будет. <br /> Но ты гарантировано наберешь
-              <span class="section-training__slogan section-training__slogan--colortext typographic-mb">+25
-                баллов</span></p>
+              <span class="section-training__slogan section-training__slogan--colortext typographic-mb">+25 баллов</span></p>
             <button class="button button--light section-training__button typographic-tb" type="button">хочу на
               бесплатное занятие</button>
           </div>
           <div class="section-training__img">
-            <!-- <img class="img" src="./images/train-mob.png" alt="Комплексная подготовка к ВНО по английскому языку"
-              srcset="images/train-mob.png 320w, images/train-tabl.png 768w, images/train-desk.png 1280w, images/train-desk-large.png 1680w"
-              sizes="(min-width: 1680px) 1680px, (min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px"> -->
-
-
             <picture>
               <source srcset="images/train-desk-large.png" type="image/png" media="(min-width: 1680px)">
               <source srcset="images/train-desk.png" type="image/png" media="(min-width: 1280px)">
@@ -75,7 +69,7 @@
       <section class="section-icons header__section-icons">
         <div class="section-icons__wrapper">
           <ul class="menu-icons">
-            <li class="menu-icons__item">
+            <li class="menu-icons__item menu-icons__item--first">
               <a href="#" class="menu-icons__link menu-icons__link--female">
                 <svg class="menu-icons__icon">
                   <use y="-1" x="-7" width="135%" height="130%" href="./images/icons-svg/symbol-defs.svg#icon-female">
@@ -84,7 +78,7 @@
               </a>
               <p class="menu-icons__description typographic-mb">Адаптированная авторская программа ВНО</p>
             </li>
-            <li class="menu-icons__item">
+            <li class="menu-icons__item menu-icons__item--second">
               <a href="#" class="menu-icons__link menu-icons__link--mobile">
                 <svg class="menu-icons__icon">
                   <use y="-1" x="-7" width="135%" height="130%"
@@ -94,7 +88,7 @@
               </a>
               <p class="menu-icons__description typographic-mb">Современные методики обучения</p>
             </li>
-            <li class="menu-icons__item">
+            <li class="menu-icons__item menu-icons__item--third">
               <a href="#" class="menu-icons__link menu-icons__link--insurance">
                 <svg class="menu-icons__icon">
                   <use y="-1" x="-7" width="135%" height="130%"
@@ -461,14 +455,6 @@
             <li class="slider__item slider__item--first-card">
               <div class="slider__link-wrapper">
                 <a href="#" class="slider__link slider__link--img">
-                  <!-- <img class="img slider__img" src="./images/graduate1.png" alt="Тоня Кучеровская"
-                    srcset="images/graduate1.png 320w, images/graduate7.png 1280w"
-                    sizes="(min-width: 1280px) 1280px, (min-width: 320px) 320px"> -->
-
-                  <!-- sizes="(max-width: 1280px) 100wv, 1280px"> -->
-                  <!-- sizes="(min-width: 320px) 320px, (min-width: 1280px) 1280px, 100wv"> -->
-                  <!-- (max-width: 320px) 280px, (max-width: 480px) 440px,  800px" -->
-                  <!-- 100wv sizes="(min-width: 1680px) 1680px, (min-width: 1280px) 1280px, (min-width: 768px) 768px, 320px"> -->
                   <picture>
                     <source srcset="images/graduate7.png" type="image/png" media="(min-width: 1280px)">
                     <source srcset="images/graduate1.png" type="image/png" media="(max-width: 1279px)">
@@ -581,7 +567,7 @@
               minlength="4" maxlength="30" autocomplete="name" required>
             <input class="input-field section-form__input typographic-mb" type="tel" name="tel" placeholder="Телефон*"
               minlength="6" maxlength="30" autocomplete="tel" required>
-            <button class="button section-form__button button--light typographic-tb" type="button">хочу на бесплатное
+            <button class="button section-form__button button--light button--longer typographic-tb" type="button">хочу на бесплатное
               занятие</button>
           </form>
         </div>
